--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cats-09032020",
+  "name": "test-funbox-310820",
   "version": "1.0.0",
   "private": true,
   "description": "Личный проект «Котики",
